# quran-companion-ayah-extraction

./: .gitignore  README.md  pyproject.toml
src/gui/: fonts.py  preview_widget.py
src/utils/: glyphs_db.py  settings.py
