[project]
name = "quran-companion-ayah-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.10.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
python_version = "3.14"
no_implicit_optional = true
strict = true
